--- a/Assets/Templates/Includes/head.html
+++ b/Assets/Templates/Includes/head.html
@@ -1,11 +1,11 @@
 <html>
-	<!-----------------------
+	<!-- ---------------------
 
 	*
 
 	* Created by Karol Sójka
 	* www.letscode.it
-	* 2020-2021
+	* 2022
 	* kontakt@letscode.it
 	
 	* Trust me... You won't find anything interesting in the code of the site, seriously. 
@@ -17,7 +17,7 @@
 
 	*
 
-	------------------------->
+	----------------------- -->
 	<head>
 		<style>
 			*{  
@@ -261,6 +261,29 @@
 			  padding-left: 0;
 			  padding-right: 0;
 			}
+
+
+			.btn-danger {
+			  background-color: #dc3545;
+			  color: #ffffff;
+			  border: 1px solid transparent;
+			  box-shadow: 0 0 rgba(0, 0, 0, 0);
+			  border-radius: 2px;
+			  -webkit-transition: background-color 0.2s, box-shadow 0.2s, background-color 0.2s, border-color 0.2s, color 0.2s;
+			  transition: background-color 0.2s, box-shadow 0.2s, background-color 0.2s, border-color 0.2s, color 0.2s;
+			  border: 0;
+			  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.15) inset;
+			}
+			.btn-danger:hover,
+			.btn-danger:focus {
+			  background-color: #af1020;
+			  color: #ffffff;
+			  border-color: transparent;
+			  box-shadow: 0 0 rgba(0, 0, 0, 0);
+			}
+
+
+
 
 			.alert {
 			  -moz-box-sizing: border-box;
