--- a/Assets/Templates/index.html
+++ b/Assets/Templates/index.html
@@ -10,6 +10,10 @@
 
     <br><a  class="a-btn" href="/sms_list"><button class="btn btn-block btn-primary">Last 10 SMS</button></a>
 
+    <br><hr>
+
+    <br><a  class="a-btn" href="/debug_options"><button class="btn btn-block btn-danger">Debug options</button></a>
+
     <!--
     <br>
 
