--- a/Assets/Templates/Includes/head.html
+++ b/Assets/Templates/Includes/head.html
@@ -312,6 +312,11 @@
 			  background-color: #15360e;
 			  box-shadow: 0 0 0 1px #2a551e inset, 0 5px 10px rgba(0, 0, 0, 0.75);
 			}
+			.alert-warning {
+				color: #ffffbc;
+				background-color: #ffff0029;
+				box-shadow: 0 0 0 1px #ffff0069 inset, 0 5px 10px rgb(0 0 0 / 75%);
+			}
 
 			a.a-btn, 
 			a.a-btn:hover, 
