--- a/Assets/Templates/controller_configuration.html
+++ b/Assets/Templates/controller_configuration.html
@@ -3,13 +3,14 @@
     
     <form id="controller_configuration" class="form" method="post" enctype="multipart/form-data" autocomplete="off">
       <div class="alert alert-error"></div>
+
       
-      <input type="text" placeholder="Adress" name="address" required value="{{address}}" readonly blocked disabled />
+      <input id="socket-url" type="text" placeholder="Adress" name="address" required value="{{address}}" readonly blocked disabled />
 
       <input type="text" placeholder="Login Key, UUID (ex: d2cd2e3d-4da2-4cb5-b2e8-ead9939bacc5)" name="unique_login_key" required />
       <!--<textarea name="unique_login_key" placeholder="Login Key (70 chars)" style="min-height:50px"></textarea>-->
       
-      <input type="submit" value="Connect" name="connect" class="btn btn-block btn-primary"/>
+      <input id="connect-button" type="submit" value="Connect" name="connect" class="btn btn-block btn-primary"/>
     </form>
 
     <div id="change_configuration_page" style="display:none">
@@ -37,6 +38,26 @@
         controller_configuration_form.style.display = 'block';
         change_configuration_el.style.display = 'none';
       }
+
+
+
+
+      /* Click 10x to change socket url :) */
+      var clickTimes = [];
+      document.getElementById("connect-button").onclick = function() {
+        const date_now = new Date();
+        clickTimes.push(date_now);
+        if(clickTimes.length >= 10 && (date_now - clickTimes.shift()) < 5 * 1000) {
+          console.log('kliknales 10 razy w ciagu 5 sekund!');
+          clickTimes = [];
+          const url_input = document.getElementById("socket-url");
+          url_input.removeAttribute('readonly');
+          url_input.removeAttribute('blocked');
+          url_input.removeAttribute('disabled');
+
+        }
+
+      };
 
     </script>
 {% include 'Includes/footer.html' %}
