Manual and favicon

--- a/Assets/Templates/Includes/head.html
+++ b/Assets/Templates/Includes/head.html
@@ -19,6 +19,9 @@
 
 	----------------------- -->
 	<head>
+
+		<link rel='shortcut icon' type='image/x-icon' href="favicon.ico" />
+
 		<style>
 			*{  
 			  margin:0;
