--- a/Assets/Templates/Includes/footer.html
+++ b/Assets/Templates/Includes/footer.html
@@ -113,7 +113,7 @@
 				console.log('loopRequest catch:', e)
 				
 			} finally {
-				setTimeout(loopRequest, 2 * 1000)
+				setTimeout(loopRequest, 999)
 			}
 		}
 
