Download log files

--- a/Assets/Templates/debug_options.html
+++ b/Assets/Templates/debug_options.html
@@ -1,8 +1,5 @@
 {% include 'Includes/head.html' %}
 
-  <script>
-
-  </script>
 
     <br>
 
@@ -28,5 +25,6 @@
 
     <br><a  class="a-btn" href="/debug/comands_in_queue"><button class="btn btn-block btn-primary">Commands in queue</button></a>
 
-  </div>
+    <br><a  class="a-btn" href="/debug/console_logs"><button class="btn btn-block btn-primary">Console logs</button></a>
+
 {% include 'Includes/footer.html' %}
